fix note-card-back overflow

--- a/src/pages/style/blog.scss
+++ b/src/pages/style/blog.scss
@@ -73,6 +73,7 @@ $pink: #ff69b4;
   top: 0;
   left: 0;
   background-color: rgb(10, 184, 76);
+  overflow: auto;
   // transition: all 1s ease;
 }
 
